--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 <!-- Product advantages -->
 <div class="advantage-img"> <a onclick="myclick()" href="javascript:void(window.open(window.clickTag))">
-    <img class="couch animated fadeIn delay-1s" src="source/sindyFIn.png" alt="Comfort as advantage" width="100%">
+    <img class="couch animated fadeIn delay-1s" src="source/sindyFin.png" alt="Comfort as advantage" width="100%">
     <img class="clock animated fadeIn delay-1s" src="source/mistaFin.png" alt="Comfort as advantage" width="100%">
     <img class="bag animated fadeIn delay-1s" src="source/donaFin.png" alt="Comfort as advantage" width="100%">
     <img class="marsha animated fadeIn delay-1s" src="source/marshaFin.png" alt="Comfort as advantage" width="100%">
@@ -80,7 +80,7 @@
 </div>
 <!-- Offer  -->
 <!-- <div class="offer animated fadeIn delay-1s"> -->
-    <img class="offer animated fadeIn delay-1s" src="/source/offer.png" alt="">
+    <img class="offer animated fadeIn delay-1s" src="source/offer.png" alt="">
 <!-- </div> -->
 <!-- Button  -->
 <div class="cta-btn animated fadeIn delay-1s">
